--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
+* {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+  padding: 10px;
+ /*  border: 1px solid black; */
+  width: 100%;
+  height: 100vh; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Box{
+  padding: 20px;
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, .8);
+  width: 30rem;
+  background-color: white;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 25%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width:600px) {
+  .Box{
+    width: 100%;
+    margin-top: 50%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.fa-quote-left{
+  position: relative;
+  top: 1rem;
+}
+
+.quote{
+  text-align: center;
+  max-width: 90%;
+  margin-left: 5%;
+}
+
+.ul{
+  list-style: none;
+  text-align: left;
+  margin: 10px 0;
+}
+
+.author{
+  margin-top: 30px;
+  text-align: end;
+}
+
+.nextQuote{
+  text-align: end;
+  margin: 10px 20px 0 0 ;
+}
+
+.nextQuoteButton{
+  border-radius: 50%;
+  padding: .5rem;
+  width: 25px;
+  height: 25px;
+  border: none;
+  box-shadow: 2px 2px 5px ;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.fa-angle-right{
   color: white;
+  position: relative;
+  top: -.2rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
