--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   padding: 10px;
  /*  border: 1px solid black; */
   width: 100%;
-  height: 100vh; 
+  height: 100vh;  /*bulb comentar*/
 }
 
 .Box{
